# ipcam

./: .gitignore  CMakeLists.txt  readme.txt
config/: cam2.ini  home.ini  local.ini
src/: CMakeLists.txt  config.cpp  ipcam-socket-server.cpp  ipcam-socket-server.h  service.cpp  service.h
vc/home/: ipcam-socket-server.sln  ipcam-socket-server.vcxproj  ipcam-socket-server.vcxproj.filters
